# dsaa-c2e

./: .gitignore  CMakeLists.txt  README.md  fatal.h  list.c  list.h  queue.c  queue.h  stackar.c  stackar.h  stackli.c  stackli.h  testlist.c  testque.c  teststka.c  teststkl.c  testtree.c  tree.c  tree.h
list/: List_FindPrevious_2.pos  List_Find_2.pos  list_Find.pos
list/pos/: List_Find_1.pos  List_Insert.pos
pos/: List_FindPrevious_1.pos
